# trello-to-slack

./: Cargo.toml  README.md
.github/workflows/: ci.yml  daily.yml  weekly.yml
src/: config.rs  main.rs  schema.rs  slack.rs  test.http  trello.rs  util.rs
